# design-system-starter

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/architecture/: token-architecture.md
docs/research/: 2026-04-30-archetype-phase-b.md  2026-04-30-archetype-revalidation.md  2026-05-01-archetype-phase-c-lean.md  _category-analysis-playbook.md  accent-baseline.md  archetype-clustering.md  color-analysis-notes.md  color-analysis.md  color-category-proposal.md  color-role-dictionary.json  color-roles-normalized.md  color-roles-raw.csv  color-roles-raw.md  component-category-proposal.md  component-dictionary.json  component-roles-normalized.md  component-roles-raw.csv  component-roles-raw.md  elevation-category-proposal.md  neutral-baseline.md  radius-category-proposal.md  semantic-layer.md  spacing-category-proposal.md  status-hue-principles.md  type-category-proposal.md  type-font-family-track.md  type-letter-spacing-track.md  type-line-height-track.md  type-size-track.md  type-style-dictionary.json  type-styles-normalized.md  type-styles-raw.csv  type-styles-raw.md  type-weight-track.md
docs/research/notebooks/: 2026-04-30-archetype-phase-b.ipynb  2026-04-30-archetype-revalidation.ipynb  2026-05-01-archetype-phase-c-lean.ipynb  README.md  mood_labels.csv  original_54.csv  pyproject.toml
scripts/: corpus-showcase.ts  dump-scales.ts  gen.ts  render-corpus-html.ts  render-html.ts  showcase.ts
scripts/analysis/: FORMAT.md  color-roles.ts  (+5 more)
src/: culori.d.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+162 files in other folders)
