[project]
name = "archetype-revalidation"
version = "0.1.0"
description = "Notebook environment for archetype re-validation analysis."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "jupyterlab>=4.0",
  "gower>=0.1.2",
]
